# Storyworks

./: .gitignore  README.md  config.example.json  start-characters.bat  start-presets.bat  start-project-manager.bat  start-scripts.bat  start-worldbook.bat  start.bat  start.sh  start_all.bat  start_all.sh  stop_all.bat
apps/backend/: .env.example  pyproject.toml  requirements.txt  run.py
apps/backend/app/: __init__.py  database.py  demo_data.py  main.py
apps/backend/app/api/: router.py
apps/backend/app/core/: config.py  database.py
apps/backend/app/models/: character.py  preset.py  project.py  script.py  worldbook.py
apps/backend/app/repositories/: character_repository.py  preset_repository.py  project_repository.py  script_repository.py  worldbook_repository.py
apps/backend/app/routers/: __init__.py  ai.py  characters.py  presets.py  projects.py  scripts.py  system.py  versions.py  worldbook.py
apps/backend/app/schemas/: character.py  preset.py  project.py  script.py  worldbook.py
apps/backend/app/services/: __init__.py  ai_log_service.py  ai_service.py  character_schema.py  character_service.py  character_template_service.py  consistency_service.py  export_service.py  import_service.py  preset_service.py  project_service.py  script_service.py  tree_service.py  version_service.py  worldbook_schema.py  worldbook_service.py
apps/backend/app/validators/: character_validator.py  preset_validator.py  project_validator.py  (+2 more)
apps/backend/tests/: test_character.py  test_character_contracts.py  test_preset.py  test_script.py  test_smoke.py  test_worldbook.py
(+163 files in other folders)
