[project]
name = "storyworks-backend"
version = "0.1.0"
description = "Storyworks backend application"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "sqlalchemy==2.0.40",
  "pydantic-settings==2.9.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
